cabal-version:      2.4
name:               lunchline
version:            0.1.0.0

synopsis: Learning Project for Mercury



author:             Luis Borjas Reyes
maintainer:         hello@lfborjas.com


extra-source-files: 

    README.md



-- Inspired by:
-- https://github.com/tchoutri/pg-entity/blob/e5fc4cfe8fcaf2a5a6d76f983c9a60b25a57777a/pg-entity.cabal 
common common-extensions
    default-extensions:
        DerivingStrategies
        DerivingVia
        DeriveGeneric
        DataKinds
        GeneralizedNewtypeDeriving
        NamedFieldPuns
        OverloadedStrings  
        TypeOperators
    default-language: Haskell2010

common common-ghc-options
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints

library
    import: common-extensions
    import: common-ghc-options
    exposed-modules: 
      LunchLine
      LunchLine.App
      LunchLine.Models
      Data.Time.Calendar.Week

    build-depends:    
      base >= 4.13 && <= 4.17
      , containers
      , time
      , bytestring
      , text
      , mtl
      , resource-pool
      , monad-logger
      , persistent
      , persistent-sqlite	
      , esqueleto
      , persistent-template
      , colonnade
      , colourista
      , optparse-applicative
      , optparse-generic
      
      

    hs-source-dirs:   src

executable lunchline-exe
    main-is: Main.hs
    build-depends:
      base
      , lunchline
    hs-source-dirs: app
    ghc-options: -threaded -rtsopts -with-rtsopts=-N
    default-language:    Haskell2010

